--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,6 @@
-
+spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3307/eatUs
+    username: root
+    password: 1234
+    driver-class-name: org.mariadb.jdbc.Driver
