--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
     username: root
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
